--- a/YBMBRILiaN/assets/css/main.css
+++ b/YBMBRILiaN/assets/css/main.css
@@ -3282,8 +3282,8 @@ section {
   text-decoration: none;
 }
 
-.program-kami {
+/* .program-kami {
   color:
     var(--color-primary) !important;
   font-weight: 500 !important;
-}
+} */
